# tictactoC

./: .gitignore  CMakeLists.txt  Makefile  README.md  player.c  tictactoCConfig.h.in
src/: CMakeLists.txt  Makefile  ai.c  ai.h  game.c  game.h  main.c  main.h  messages.c  messages.h  player.c  player.h
tests/: AllTests.c  CMakeLists.txt  game-test.c  game-test.h  helper.c  helper.h  messages-test.c  messages-test.h  test.h  tests.c  tests.h
tictactoC/: game.c  main.c  messages.h
